--- a/project/www/admin/src/template/menu_admin.html
+++ b/project/www/admin/src/template/menu_admin.html
@@ -3,12 +3,16 @@
         <ul>
             <li><a class="radio" href="./?ind=espace_user">Mon compte</a></li>
             <li><a class="radio" href="./?ind=articles">Les articles</a></li>
-            <li><a class="radio" href="./?ind=partage">Les screens</a></li>
-            <li><a class="radio" href="./">L'armement FPS</a></li>
-            <li><a class="radio" href="./">L'armement vaisseau</a></li>
-            <li><a class="radio" href="./">Lieux</a></li>
-            <li><a class="radio" href="./">Espèce</a></li>
-            <li><a class="radio" href="./">Humain</a></li>
+            <li><a class="radio" href="./?ind=screens">Les screens</a></li>
+            <li><a class="radio" href="./?ind=arm_fps">L'armement FPS</a></li>
+            <li><a class="radio" href="./?ind=arm_vaiss">L'armement vaisseau</a></li>
+            <li><a class="radio" href="./?ind=lieux">Lieux</a></li>
+            <li><a class="radio" href="./?ind=especes">Espèces</a></li>
+            <li><a class="radio" href="./?ind=construct">Constructeurs</a></li>
+            <li><a class="radio" href="./?ind=transports">Transports</a></li>
+            <li><a class="radio" href="./?ind=proprietaires">Propriétaires</a></li>
+            <li><a class="radio" href="./?ind=services">Services</a></li>
+            [#CITIZEN_INDEX_ADD_MENU_ADMIN#]
         </ul>
     </div>
     <div id="admin_contenu">
