--- a/project/www/admin/src/template/objet.html
+++ b/project/www/admin/src/template/objet.html
@@ -1,7 +1,7 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         [#CITIZEN_TAB_CHOICE#]
-        <div class="admin-title"><h1>Articles</h1></div>
+        <div class="admin-title"><h1>[#CITIZEN_TAB_NAME#]</h1></div>
         <div class="admin-contenu-tab">
             <input type="hidden" name="nbpg" id="nbpg" value="[#CITIZEN_TAB_NBPG#]">
             <input type="hidden" name="nmpg" id="nmpg" value="[#CITIZEN_TAB_NMPG#]">
