--- a/project/www/admin/src/template/objet_all.html
+++ b/project/www/admin/src/template/objet_all.html
@@ -1,7 +1,7 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         [#CITIZEN_TAB_CHOICE#]
-        <div class="admin-title"><h1>Articles</h1></div>
+        <div class="admin-title"><h1>[#CITIZEN_TAB_NAME#]</h1></div>
         <div class="admin-contenu-tab">
             <input type="hidden" name="nbpg" id="nbpg" value="[#CITIZEN_TAB_NBPG#]">
             <input type="hidden" name="nmpg" id="nmpg" value="[#CITIZEN_TAB_NMPG#]">
@@ -10,7 +10,6 @@
                 <tr>
                     <th>Nom</th>
                     <th class="th-admin-visible">Visible</th>
-                    <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                     <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                 </tr>
                 <tbody id="tab-body-all">
