--- a/project/www/admin/src/template/add_mod_article.html
+++ b/project/www/admin/src/template/add_mod_article.html
@@ -3,21 +3,21 @@
         <div class="admin-title"><h1>Articles</h1></div>
         <div class="admin-contenu">
             <div class="two-column add-list-img">
-                <img id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img">
+                <img id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_ARTI_ISPRO#]>
                 <div class="list_img">[#CITIZEN_ARTI_IMG#]</div>
             </div>
             <div class="two-column">
                 <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_ARTI_MODIF_CHECK#]>
             </div>
             <img src="" alt="" class="two-column">
-            <label for="label-1">titre</label><input type="text" name="" id="" value="[#CITIZEN_ARTI_TITRE#]" class="input-admin">
-            <label for="label-1">vidéo</label><input type="text" name="" id="" value="[#CITIZEN_ARTI_VIDEO#]" class="input-admin">
+            <label for="label-1">titre</label><input type="text" name="" id="" value="[#CITIZEN_ARTI_TITRE#]" class="input-admin"[#CITIZEN_ARTI_ISPRO#]>
+            <label for="label-1">vidéo</label><input type="text" name="" id="" value="[#CITIZEN_ARTI_VIDEO#]" class="input-admin"[#CITIZEN_ARTI_ISPRO#]>
             <label for="label-1">catégorie</label>
-            <select name="categorie" id="categorie-select" class="input-admin">
+            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARTI_ISPRO#]>
                 <option value=""></option>[#CITIZEN_ARTI_CAT#]
             </select>
-            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin">[#CITIZEN_ARTI_CONTENU#]</textarea>
-            <label for="label-1">résumé</label><textarea name="" id="" cols="30" rows="10" class="input-admin">[#CITIZEN_ARTI_RESUME#]</textarea>
+            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_CONTENU#]</textarea>
+            <label for="label-1">résumé</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_RESUME#]</textarea>
             <button class="two-column sauvegarde">Validation</button>
         </div>
     </div>
