--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -50,6 +50,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sceditor@3/minified/themes/default.min.css" />
   </head>
 
   <body>
@@ -249,6 +250,17 @@
       <!-- partial -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
       <script src="../src/js/script.js"></script>
-      <script src="../src/js/le_fetch.js"></script>[#CITIZEN_INDEX_JS#]
+      <script src="../src/js/le_fetch.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sceditor@3/minified/sceditor.min.js"></script>
+      <script>
+        /*document.querySelectorAll(".text-bbcode").forEach(element => {
+          sceditor.create(element, {
+            format: 'bbcode',
+            width: '80%',
+            icons: 'monocons',
+            style: 'https://cdn.jsdelivr.net/npm/sceditor@latest/minified/themes/content/default.min.css'
+          });
+        });*/
+        </script>[#CITIZEN_INDEX_JS#]
   </body>
 </html>
