--- a/project/www/admin/src/template/gameplay/add_mod_article.html
+++ b/project/www/admin/src/template/gameplay/add_mod_article.html
@@ -7,7 +7,7 @@
                 <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_ARTI_MODIF_CHECK#]>
             </div>
             <div class="two-column add-list-img">
-                <img id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_ARTI_ISPRO#]>
+                <img class="img-add" id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_ARTI_ISPRO#]>
                 <div class="list_img">[#CITIZEN_ARTI_IMG#]</div>
             </div>
             <img src="" alt="" class="two-column">
