--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -226,6 +226,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="./src/js/tab_body.js"></script>
     <script>
         window.onscroll = function () {
           scrollFunction();
