--- a/project/www/admin/src/template/gameplay/add_mod_construct.html
+++ b/project/www/admin/src/template/gameplay/add_mod_construct.html
@@ -21,7 +21,7 @@
                     <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                     <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                 </tr>
-                <tbody id="tab-body-all">
+                <tbody class="tab-body-td" id="tab-body-all">
                     [#CITIZEN_CONST_TAB_LIEU#]
                 </tbody>
             </table>
