--- a/project/www/admin/src/template/gameplay/articles.html
+++ b/project/www/admin/src/template/gameplay/articles.html
@@ -13,7 +13,7 @@
                     <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                     <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                 </tr>
-                <tbody id="tab-body-all">
+                <tbody class="tab-body-td" id="tab-body-all">
                     [#CITIZEN_TAB_ALL#]
                 </tbody>
             </table>
