--- a/project/www/admin/src/template/gameplay/screens_all.html
+++ b/project/www/admin/src/template/gameplay/screens_all.html
@@ -12,7 +12,7 @@
                     <th class="th-admin-visible">Visible</th>
                     <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                 </tr>
-                <tbody id="tab-body-all">
+                <tbody class="tab-body-td" id="tab-body-all">
                     [#CITIZEN_TAB_ALL#]
                 </tbody>
             </table>
