affichage php + petit modif css pour responsive..

--- a/project/www/src/css/articles.css
+++ b/project/www/src/css/articles.css
@@ -78,9 +78,6 @@
     
 }
 
-
-
-
 .page_generale {
     color: aliceblue;
     display: flex;
@@ -221,6 +218,9 @@ iframe {
         margin: 20px 0px;
         width: 100%;
     }
+}
+.voir_aussi{
+    padding-top: 50px;
 }
 .blog-card {
     display: flex;
