--- a/project/www/src/css/gameplay.css
+++ b/project/www/src/css/gameplay.css
@@ -15,9 +15,23 @@
   border-radius: 10px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 300px;
-  height: 550px;
-  margin: 10px;
+  width: 30%;
+  margin: 20px;
+}
+@media screen and (max-width: 1200px) {
+  .card_article{
+    width: 400px;
+  }
+}
+@media screen and (max-width: 880px) {
+  .card_article{
+    width: 80%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .card_article{
+    width: 100%;
+  }
 }
 .card-header_article img {
   width: 100%;
@@ -50,8 +64,10 @@
 }
 .card-body_article p {
   font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.3rem;
   margin: 0 0 40px 0;
-  font-weight: 500;
+  font-weight: 300;
   color: rgb(220, 220, 220);
 }
 .user_article {
