--- a/project/www/admin/src/template/gameplay/add_mod_construct.html
+++ b/project/www/admin/src/template/gameplay/add_mod_construct.html
@@ -25,7 +25,10 @@
                     [#CITIZEN_CONST_TAB_LIEU#]
                 </tbody>
             </table>
-            <button class="two-column sauvegarde" id="validation">Validation</button>
+            <div class="two-column add-mod-bt">
+                <button class="sauvegarde" id="annuler">annuler</button>
+                <button class="sauvegarde" id="validation">Validation</button>
+            </div>
         </div>
     </div>
 </div>
