--- a/project/www/admin/src/template/menu_admin.html
+++ b/project/www/admin/src/template/menu_admin.html
@@ -10,6 +10,18 @@
             <li><a class="radio" href="./?ind=especes">Espèces</a></li>
             <li><a class="radio" href="./?ind=construct">Constructeurs</a></li>
             <li><a class="radio" href="./?ind=transports">Transports</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>matière première</a></li>
+            <li><a class="radio" href="./?ind=transports">catégories espèces</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>catégories lieux</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>catégorie armement</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>catégories transports</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>couleur</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>disponibilités</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>equipement</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>faiblesses vaisseau</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>forces vaisseau</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>taille armement vaisseau</a></li>
+            <li><a class="radio" href="./?ind=transports"></a>risque</a></li>
             <li><a class="radio" href="./?ind=proprietaires">Propriétaires</a></li>
             <li><a class="radio" href="./?ind=services">Services</a></li>
             [#CITIZEN_INDEX_ADD_MENU_ADMIN#]
