--- a/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_vaiss.html
@@ -1,19 +1,26 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
-        <div class="admin-title"><h1>Propriétaire</h1></div>
+        <div class="admin-title"><h1>Armement vaisseau</h1></div>
         <div class="admin-contenu">
-            <input type="hidden" name="id" value="[#CITIZEN_PROPR_ID#]" />
+            <input type="hidden" name="id" value="[#CITIZEN_ARM_VAISS_ID#]" />
             <div class="two-column">
-                <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_PROPR_MODIF_CHECK#]>
+                <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_ARM_VAISS_MODIF_CHECK#]>
             </div>
             <div class="two-column add-list-img">
-                <img class="img-add" id="img-logo" src="[#CITIZEN_PROPR_LOGO#]" alt="add img"[#CITIZEN_PROPR_ISPRO#]>
-                <img class="img-add" id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_PROPR_ISPRO#]>
-                <div class="list_img">[#CITIZEN_PROPR_IMG#]</div>
+                <img class="img-add" id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_ARM_VAISS_ISPRO#]>
+                <div class="list_img">[#CITIZEN_ARM_VAISS_IMG#]</div>
             </div>
             <img src="" alt="" class="two-column">
-            <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_PROPR_NOM#]" class="input-admin"[#CITIZEN_PROPR_ISPRO#]>
-            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_PROPR_ISPRO#]>[#CITIZEN_PROPR_CONTENU#]</textarea>
+            <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_ARM_VAISS_NOM#]" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
+            <label for="label-1">taille</label>
+            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
+                <option value=""></option>[#CITIZEN_ARM_VAISS_TAILLE#]
+            </select>
+            <label for="label-1">constructeur</label>
+            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARM_VAISS_ISPRO#]>
+                <option value=""></option>[#CITIZEN_ARM_VAISS_CONST#]
+            </select>
+            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARM_VAISS_ISPRO#]>[#CITIZEN_ARM_VAISS_CONTENU#]</textarea>
             <div id="div-all-tab" class="two-column">
                 <div>
                     <h2>Informations</h2>
@@ -25,7 +32,7 @@
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
                         <tbody class="tab-body-td" id="tab-body-all">
-                            [#CITIZEN_PROPR_TAB_INFO#]
+                            [#CITIZEN_ARM_VAISS_TAB_INFO#]
                         </tbody>
                     </table>
                 </div>
@@ -39,7 +46,7 @@
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
                         <tbody class="tab-body-td" id="tab-body-all">
-                            [#CITIZEN_PROPR_TAB_LIEU#]
+                            [#CITIZEN_ARM_VAISS_TAB_LIEU#]
                         </tbody>
                     </table>
                 </div>
