--- a/project/www/admin/src/template/gameplay/add_mod_article.html
+++ b/project/www/admin/src/template/gameplay/add_mod_article.html
@@ -19,7 +19,10 @@
             </select>
             <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_CONTENU#]</textarea>
             <label for="label-1">résumé</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARTI_ISPRO#]>[#CITIZEN_ARTI_RESUME#]</textarea>
-            <button class="two-column sauvegarde" id="validation">Validation</button>
+            <div class="two-column add-mod-bt">
+                <button class="sauvegarde" id="annuler">annuler</button>
+                <button class="sauvegarde" id="validation">Validation</button>
+            </div>
         </div>
     </div>
 </div>
