--- a/project/www/admin/src/template/gameplay/add_mod_screens.html
+++ b/project/www/admin/src/template/gameplay/add_mod_screens.html
@@ -11,7 +11,10 @@
             </div>
             <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_SCREEN_NOM#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
             <label for="label-1">alt</label><input type="text" name="" id="" value="[#CITIZEN_SCREEN_ALT#]" class="input-admin"[#CITIZEN_SCREEN_ISPRO#]>
-            <button class="two-column sauvegarde" id="validation">Validation</button>
+            <div class="two-column add-mod-bt">
+                <button class="sauvegarde" id="annuler">annuler</button>
+                <button class="sauvegarde" id="validation">Validation</button>
+            </div>
         </div>
     </div>
 </div>
