--- a/project/www/admin/src/template/objet/add_mod_arm_fps.html
+++ b/project/www/admin/src/template/objet/add_mod_arm_fps.html
@@ -1,19 +1,29 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
-        <div class="admin-title"><h1>Propriétaire</h1></div>
+        <div class="admin-title"><h1>Armement FPS</h1></div>
         <div class="admin-contenu">
-            <input type="hidden" name="id" value="[#CITIZEN_PROPR_ID#]" />
+            <input type="hidden" name="id" value="[#CITIZEN_ARM_FPS_ID#]" />
             <div class="two-column">
-                <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_PROPR_MODIF_CHECK#]>
+                <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_ARM_FPS_MODIF_CHECK#]>
             </div>
             <div class="two-column add-list-img">
-                <img class="img-add" id="img-logo" src="[#CITIZEN_PROPR_LOGO#]" alt="add img"[#CITIZEN_PROPR_ISPRO#]>
-                <img class="img-add" id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_PROPR_ISPRO#]>
-                <div class="list_img">[#CITIZEN_PROPR_IMG#]</div>
+                <img class="img-add" id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_ARM_FPS_ISPRO#]>
+                <div class="list_img">[#CITIZEN_ARM_FPS_IMG#]</div>
             </div>
             <img src="" alt="" class="two-column">
-            <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_PROPR_NOM#]" class="input-admin"[#CITIZEN_PROPR_ISPRO#]>
-            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_PROPR_ISPRO#]>[#CITIZEN_PROPR_CONTENU#]</textarea>
+            <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_ARM_FPS_NOM#]" class="input-admin"[#CITIZEN_ARM_FPS_ISPRO#]>
+            <label for="label-1">catégorie</label>
+            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARM_FPS_ISPRO#]>
+                <option value=""></option>[#CITIZEN_ARM_FPS_CAT#]
+            </select>
+            <label for="label-1">constructeur</label>
+            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_ARM_FPS_ISPRO#]>
+                <option value=""></option>[#CITIZEN_ARM_FPS_CONST#]
+            </select>
+            <label for="label-1">poids</label><input type="text" name="" id="" value="[#CITIZEN_ARM_FPS_POIDS#]" class="input-admin"[#CITIZEN_ARM_FPS_ISPRO#]>
+            <label for="label-1">portée</label><input type="text" name="" id="" value="[#CITIZEN_ARM_FPS_PORTEE#]" class="input-admin"[#CITIZEN_ARM_FPS_ISPRO#]>
+            <label for="label-1">perte</label><input type="text" name="" id="" value="[#CITIZEN_ARM_FPS_PERTE#]" class="input-admin"[#CITIZEN_ARM_FPS_ISPRO#]>
+            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ARM_FPS_ISPRO#]>[#CITIZEN_ARM_FPS_CONTENU#]</textarea>
             <div id="div-all-tab" class="two-column">
                 <div>
                     <h2>Informations</h2>
@@ -25,7 +35,7 @@
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
                         <tbody class="tab-body-td" id="tab-body-all">
-                            [#CITIZEN_PROPR_TAB_INFO#]
+                            [#CITIZEN_ARM_FPS_TAB_INFO#]
                         </tbody>
                     </table>
                 </div>
@@ -39,7 +49,7 @@
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
                         <tbody class="tab-body-td" id="tab-body-all">
-                            [#CITIZEN_PROPR_TAB_LIEU#]
+                            [#CITIZEN_ARM_FPS_TAB_LIEU#]
                         </tbody>
                     </table>
                 </div>
@@ -48,6 +58,5 @@
                 <button class="sauvegarde" id="annuler">annuler</button>
                 <button class="sauvegarde" id="validation">Validation</button>
             </div>
-        </div>
     </div>
 </div>
