--- a/project/www/admin/src/template/objet/add_mod_lieux.html
+++ b/project/www/admin/src/template/objet/add_mod_lieux.html
@@ -42,7 +42,10 @@
                     </table>
                 </div>
             </div>
-            <button class="two-column sauvegarde" id="validation">Validation</button>
+            <div class="two-column add-mod-bt">
+                <button class="sauvegarde" id="annuler">annuler</button>
+                <button class="sauvegarde" id="validation">Validation</button>
+            </div>
         </div>
     </div>
 </div>
