--- a/project/www/src/css/index.css
+++ b/project/www/src/css/index.css
@@ -781,7 +781,7 @@ a:hover {
 }
 
 .wrapper {
-    padding: 10px 0 50px 0;
+    padding: 10px 0 0px 0;
 }
 
 .news-slider {
@@ -1093,4 +1093,138 @@ a:hover {
     border-bottom-style: solid;
     border-right-style: solid;
     bottom: 0;
+}
+/*image pour guide*/
+.cards_guide {
+    padding: 30px 100px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+   
+}
+
+.card--1 .card__img,
+.card--1 .card__img--hover {
+    background-image: url('/../src/img/vaisseau_illustration.jpg');
+}
+
+.card--2 .card__img,
+.card--2 .card__img--hover {
+    background-image: url('/../src/img/vehicule_illustration.jpg');
+}
+.card--3 .card__img,
+.card--3 .card__img--hover {
+    background-image: url('/../src/img/arme_illustration.jpg');
+}
+.card--4 .card__img,
+.card--4 .card__img--hover {
+    background-image: url('/../src/img/planete_illustration.jpg');
+}
+.card--4 .card__img,
+.card--4 .card__img--hover {
+    background-image: url('/../src/img/civil8.jpg');
+}
+.card--5 .card__img,
+.card--5 .card__img--hover {
+    background-image: url('/../src/img/planete_illustration.jpg');
+}
+.card--6 .card__img,
+.card--6 .card__img--hover {
+    background-image: url('/../src/img/lune1.jpg');
+}
+.card--7 .card__img,
+.card--7 .card__img--hover {
+    background-image: url('/../src/img/ville23.jpg');
+}
+.card--8 .card__img,
+.card--8 .card__img--hover {
+    background-image: url('/../src/img/station.jpg');
+}
+.card--9 .card__img,
+.card--9 .card__img--hover {
+    background-image: url('/../src/img/systeme1.jpg');
+}
+.card__img {
+    visibility: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 135px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+
+}
+
+.card__info-hover {
+    position: absolute;
+    padding: 16px;
+    width: 100%;
+    opacity: 0;
+    top: 0;
+}
+
+.card__img--hover {
+    transition: 0.2s all ease-out;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    position: absolute;
+    height: 135px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    top: 0;
+
+}
+
+.card_guide {
+    margin-right: 25px;
+    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+    background-color: var(--light-color);
+    width: 200px;
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+}
+
+.card_guide:hover {
+    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+    transform: scale(1.10, 1.10);
+}
+
+.card__info {
+    z-index: 2;
+    background-color: var(--light-color);
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    padding: 16px 24px 24px 24px;
+}
+
+
+
+.card__title {
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-family: "jurabook";
+    color: aliceblue;
+}
+
+
+
+.card_guide:hover .card__img--hover {
+    height: 100%;
+    opacity: 0.3;
+}
+
+.card_guide:hover .card__info {
+    background-color: transparent;
+    position: relative;
+}
+
+.card_guide:hover .card__info-hover {
+    opacity: 1;
 }
