--- a/project/www/admin/src/template/gameplay/add_mod_construct.html
+++ b/project/www/admin/src/template/gameplay/add_mod_construct.html
@@ -1,7 +1,7 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         <div class="admin-title"><h1>Constructeur</h1></div>
-        <div class="admin-contenu">
+        <form class="admin-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_CONST_ID#]" />
             <div class="two-column">
                 <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_CONST_MODIF_CHECK#]>
@@ -15,20 +15,31 @@
             <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_CONST_ISPRO#]>[#CITIZEN_CONST_CONTENU#]</textarea>
             <h2 class="two-column">Lieux</h2>
             <button class="two-column sauvegarde" id="add-lieu">Ajouter un lieu</button>
-            <table id="tab-all" class="two-column">
-                <tr>
-                    <th>Nom</th>
-                    <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
-                    <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
-                </tr>
-                <tbody class="tab-body-td" id="tab-body-all">
-                    [#CITIZEN_CONST_TAB_LIEU#]
-                </tbody>
-            </table>
+            <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="" checked>
+            <div id="div-all-tab" class="two-column">
+                <div id="div-ul-onglets">
+                    <ul id="onglets">
+                        <li id="label-onglet-lieu"><label for="onglet-lieu"> Lieux </label></li>
+                    </ul>
+                </div>
+                <div class="div-onglet" id="div-onglet-lieu">
+                    <button class="sauvegarde" id="add-lieu">Ajouter un lieu</button>
+                    <table>
+                        <tr>
+                            <th>Nom</th>
+                            <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
+                            <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
+                        </tr>
+                        <tbody class="tab-body-td" id="tab-body-all">
+                            [#CITIZEN_CONST_TAB_LIEU#]
+                        </tbody>
+                    </table>
+                </div>
+            </div>
             <div class="two-column add-mod-bt">
                 <button class="sauvegarde" id="annuler">annuler</button>
                 <button class="sauvegarde" id="validation">Validation</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
