--- a/project/www/admin/src/template/objet/add_mod_transp.html
+++ b/project/www/admin/src/template/objet/add_mod_transp.html
@@ -1,7 +1,7 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         <div class="admin-title"><h1>Transport</h1></div>
-        <div class="admin-contenu">
+        <form class="admin-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_TRANSP_ID#]" />
             <div class="two-column">
                 <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_TRANSP_MODIF_CHECK#]>
@@ -10,98 +10,121 @@
                 <img class="img-add" id="img-art-add" src="./src/images/plus-square-dotted.svg" alt="add img"[#CITIZEN_TRANSP_ISPRO#]>
                 <div class="list_img">[#CITIZEN_TRANSP_IMG#]</div>
             </div>
-            <img src="" alt="" class="two-column">
-            <label for="label-1">nom</label><input type="text" name="" id="" value="[#CITIZEN_TRANSP_NOM#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
-            <label for="label-1">catégorie</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="nom">nom</label><input type="text" name="nom" id="nom" value="[#CITIZEN_TRANSP_NOM#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="categorie">catégorie</label>
+            <select name="categorie" id="categorie" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
                 <option value=""></option>[#CITIZEN_TRANSP_CAT#]
             </select>
-            <label for="label-1">disponible</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="disponible">disponible</label>
+            <select name="disponible" id="disponible" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
                 <option value=""></option>[#CITIZEN_TRANSP_DISP#]
             </select>
-            <label for="label-1">type</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="type">type</label>
+            <select name="type" id="type" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
                 <option value=""></option>[#CITIZEN_TRANSP_TYPE#]
             </select>
-            <label for="label-1">construct</label>
-            <select name="categorie" id="categorie-select" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="construct">construct</label>
+            <select name="construct" id="construct" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
                 <option value=""></option>[#CITIZEN_TRANSP_CONSTRUCT#]
             </select>
-            <label for="label-1">prix</label><input type="text" name="" id="" value="[#CITIZEN_TRANSP_PRIX#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
-            <label for="label-1">équipage</label><input type="text" name="" id="" value="[#CITIZEN_TRANSP_EQUIPAGE#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
-            <label for="label-1">taille</label><input type="text" name="" id="" value="[#CITIZEN_TRANSP_TAILLE#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
-            <label for="label-1">poids</label><input type="text" name="" id="" value="[#CITIZEN_TRANSP_POIDS#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
-            <label for="label-1">vitesse max</label><input type="text" name="" id="" value="[#CITIZEN_TRANSP_VITESSMAX#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
-            <label for="label-1">capacite</label><input type="text" name="" id="" value="[#CITIZEN_TRANSP_CAPACITE#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
-            <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_TRANSP_ISPRO#]>[#CITIZEN_TRANSP_CONTENU#]</textarea>
+            <label for="prix">prix</label><input type="text" name="prix" id="prix" value="[#CITIZEN_TRANSP_PRIX#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="equipage">équipage</label><input type="text" name="equipage" id="equipage" value="[#CITIZEN_TRANSP_EQUIPAGE#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="taille">taille</label><input type="text" name="taille" id="taille" value="[#CITIZEN_TRANSP_TAILLE#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="poids">poids</label><input type="text" name="poids" id="poids" value="[#CITIZEN_TRANSP_POIDS#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="vitesse-max">vitesse max</label><input type="text" name="vitesse-max" id="vitesse-max" value="[#CITIZEN_TRANSP_VITESSMAX#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="capacite">capacite</label><input type="text" name="capacite" id="capacite" value="[#CITIZEN_TRANSP_CAPACITE#]" class="input-admin"[#CITIZEN_TRANSP_ISPRO#]>
+            <label for="contenu">contenu</label><textarea name="contenu" id="contenu" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_TRANSP_ISPRO#]>[#CITIZEN_TRANSP_CONTENU#]</textarea>
+            <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
+            <input type="radio" class="radio-onglet" id="onglet-force" name="radio-onglet" value="">
+            <input type="radio" class="radio-onglet" id="onglet-faibl" name="radio-onglet" value="">
+            <input type="radio" class="radio-onglet" id="onglet-equip" name="radio-onglet" value="">
+            <input type="radio" class="radio-onglet" id="onglet-arm" name="radio-onglet" value="">
+            <input type="radio" class="radio-onglet" id="onglet-lieu" name="radio-onglet" value="">
             <div id="div-all-tab" class="two-column">
-                <div>
-                    <h2>Informations</h2>
+                <div id="div-ul-onglets">
+                    <ul id="onglets">
+                        <li id="label-onglet-info"><label for="onglet-info"> Informations </label></li>
+                        <li id="label-onglet-force"><label for="onglet-force"> Force </label></li>
+                        <li id="label-onglet-faibl"><label for="onglet-faibl"> Faiblesse </label></li>
+                        <li id="label-onglet-equip"><label for="onglet-equip"> Equipement </label></li>
+                        <li id="label-onglet-arm"><label for="onglet-arm"> Armement </label></li>
+                        <li id="label-onglet-lieu"><label for="onglet-lieu"> Lieux </label></li>
+                    </ul>
+                </div>
+                <div class="div-onglet" id="div-onglet-info">
                     <button class="sauvegarde" id="add-lieu">Ajouter une information</button>
-                    <table id="tab-all">
+                    <table id="tab-info">
                         <tr>
                             <th>Informations</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td" id="tab-body-info">
                             [#CITIZEN_TRANSP_TAB_INFO#]
                         </tbody>
                     </table>
                 </div>
-                <div>
-                    <h2>Force</h2>
+                <div class="div-onglet" id="div-onglet-force">
                     <button class="sauvegarde" id="add-force">Ajouter une force</button>
-                    <table id="tab-all">
+                    <table id="tab-force">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td" id="tab-body-force">
                             [#CITIZEN_TRANSP_TAB_FORCE#]
                         </tbody>
                     </table>
                 </div>
-                <div>
-                    <h2>Faiblesse</h2>
+                <div class="div-onglet" id="div-onglet-faibl">
                     <button class="sauvegarde" id="add-faiblesse">Ajouter une faiblesse</button>
-                    <table id="tab-all">
+                    <table id="tab-faibl">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td" id="tab-body-faibl">
                             [#CITIZEN_TRANSP_TAB_FAIBL#]
                         </tbody>
                     </table>
                 </div>
-                <div>
-                    <h2>Equipement</h2>
+                <div class="div-onglet" id="div-onglet-equip">
                     <button class="sauvegarde" id="add-equipement">Ajouter un équipement</button>
-                    <table id="tab-all">
+                    <table id="tab-equip">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td" id="tab-body-equip">
                             [#CITIZEN_TRANSP_TAB_EQUIPEM#]
                         </tbody>
                     </table>
                 </div>
-                <div>
-                    <h2>Lieux</h2>
-                    <button class="sauvegarde" id="add-lieu">Ajouter un lieu</button>
-                    <table id="tab-all">
+                <div class="div-onglet" id="div-onglet-arm">
+                    <button class="sauvegarde" id="add-armement">Ajouter un armement</button>
+                    <table id="tab-arm">
                         <tr>
                             <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
-                        <tbody class="tab-body-td" id="tab-body-all">
+                        <tbody class="tab-body-td" id="tab-body-arm">
+                            [#CITIZEN_TRANSP_TAB_EQUIPEM#]
+                        </tbody>
+                    </table>
+                </div>
+                <div class="div-onglet" id="div-onglet-lieu">
+                    <button class="sauvegarde" id="add-lieu">Ajouter un lieu</button>
+                    <table id="tab-lieux">
+                        <tr>
+                            <th>Nom</th>
+                            <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
+                            <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
+                        </tr>
+                        <tbody class="tab-body-td" id="tab-body-lieux">
                             [#CITIZEN_TRANSP_TAB_LIEU#]
                         </tbody>
                     </table>
@@ -111,6 +134,6 @@
                 <button class="sauvegarde" id="annuler">annuler</button>
                 <button class="sauvegarde" id="validation">Validation</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
