--- a/project/www/admin/src/template/gameplay/add_mod_screens.html
+++ b/project/www/admin/src/template/gameplay/add_mod_screens.html
@@ -1,7 +1,7 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         <div class="admin-title"><h1>Screen</h1></div>
-        <div class="admin-contenu">
+        <form class="admin-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_SCREEN_ID#]" />
             <div class="two-column">
                 <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_SCREEN_MODIF_CHECK#]>
@@ -15,6 +15,6 @@
                 <button class="sauvegarde" id="annuler">annuler</button>
                 <button class="sauvegarde" id="validation">Validation</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
