--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konrad Star citizen</title>
-    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../src/fonts/stylesheet.css" />
-    <link rel="stylesheet" href="../src/css/style-header.css" />
-    <link rel="stylesheet" href="../src/css/index.css" />
-    <link rel="stylesheet" href="../src/css/equipement.css" />
-    <link rel="stylesheet" href="../src/css/equipement_ind.css" />
-    <link rel="stylesheet" href="../src/css/contact.css" />
-    <link rel="stylesheet" href="../src/css/planete.css" />
-    <link rel="stylesheet" href="../src/css/systeme.css" />
-    <link rel="stylesheet" href="../src/css/login.css" />
-    <link rel="stylesheet" href="../src/css/civilisation.css" />
-    <link rel="stylesheet" href="../src/css/articles.css" />
-    <link rel="stylesheet" href="../src/css/compte.css" />
-    <link rel="stylesheet" href="../src/css/login.css" />
-    <link rel="stylesheet" href="../src/css/squadron.css" />
-    <link rel="stylesheet" href="../src/css/partage_screen.css" />
-    <link rel="stylesheet" href="../src/css/gallerie.css" />
-    <link rel="stylesheet" href="../src/css/gestion_screen.css" />
-    <link rel="stylesheet" href="../src/css/rgpd.css" />
-    <link rel="stylesheet" href="../src/css/streamer.css" />
-    <link rel="stylesheet" href="../src/css/patch_note.css" />
-    <link rel="stylesheet" href="../src/css/lieu.css" />
-    <link rel="stylesheet" href="../src/css/gameplay.css" />[#CITIZEN_INDEX_CSS#]
+    <link rel="icon" href="./../favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./../src/fonts/stylesheet.css" />
+    <link rel="stylesheet" href="./../src/css/style-header.css" />
+    <link rel="stylesheet" href="./../src/css/index.css" />
+    <link rel="stylesheet" href="./../src/css/equipement.css" />
+    <link rel="stylesheet" href="./../src/css/equipement_ind.css" />
+    <link rel="stylesheet" href="./../src/css/contact.css" />
+    <link rel="stylesheet" href="./../src/css/planete.css" />
+    <link rel="stylesheet" href="./../src/css/systeme.css" />
+    <link rel="stylesheet" href="./../src/css/login.css" />
+    <link rel="stylesheet" href="./../src/css/civilisation.css" />
+    <link rel="stylesheet" href="./../src/css/articles.css" />
+    <link rel="stylesheet" href="./../src/css/compte.css" />
+    <link rel="stylesheet" href="./../src/css/login.css" />
+    <link rel="stylesheet" href="./../src/css/squadron.css" />
+    <link rel="stylesheet" href="./../src/css/partage_screen.css" />
+    <link rel="stylesheet" href="./../src/css/gallerie.css" />
+    <link rel="stylesheet" href="./../src/css/gestion_screen.css" />
+    <link rel="stylesheet" href="./../src/css/rgpd.css" />
+    <link rel="stylesheet" href="./../src/css/streamer.css" />
+    <link rel="stylesheet" href="./../src/css/patch_note.css" />
+    <link rel="stylesheet" href="./../src/css/lieu.css" />
+    <link rel="stylesheet" href="./../src/css/gameplay.css" />[#CITIZEN_INDEX_CSS#]
+    <link rel="stylesheet" href="./src/css/onglet.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -63,22 +64,22 @@
         ></label>
         <div class="content">
           <div class="logo">
-            <a href="../"><img src="../src/img/logo_test.png" alt="" /></a>
+            <a href="./../"><img src="./../src/img/logo_test.png" alt="" /></a>
           </div>
           <ul class="links">
-            <li><a class="radio" href="../">Accueil</a></li>
+            <li><a class="radio" href="./../">Accueil</a></li>
             <li>
               <a href="#" class="desktop-link radio">Actus</a>
               <input type="checkbox" id="show-actus" />
               <label for="show-actus" class="radio">Actus</label>
               <ul>
                 <li>
-                  <a class="radio" href="../?ind=actualites"
+                  <a class="radio" href="./../?ind=actualites"
                     >Toutes les actus</a
                   >
                 </li>
                 <li>
-                  <a class="radio" href="../?ind=patch_note">Patch Notes</a>
+                  <a class="radio" href="./../?ind=patch_note">Patch Notes</a>
                 </li>
               </ul>
             </li>
@@ -88,10 +89,10 @@
               <label for="show-guide" class="radio">Guide</label>
               <ul class="deroulant">
                 <li>
-                  <a class="radio" href="../?ind=equipements">Equipements</a>
+                  <a class="radio" href="./../?ind=equipements">Equipements</a>
                 </li>
-                <li><a class="radio" href="../?ind=lieux">Lieux</a></li>
-                <li><a class="radio" href="../?ind=especes">Espèces</a></li>
+                <li><a class="radio" href="./../?ind=lieux">Lieux</a></li>
+                <li><a class="radio" href="./../?ind=especes">Espèces</a></li>
               </ul>
             </li>
             <li>
@@ -100,12 +101,12 @@
               <label for="show-gameplay" class="radio">Gameplay</label>
               <ul class="deroulant">
                 <li>
-                  <a class="radio" href="../?ind=articles">Tous les articles</a>
+                  <a class="radio" href="./../?ind=articles">Tous les articles</a>
                 </li>
-                <li><a class="radio" href="../?ind=gameplay">Streamer</a></li>
+                <li><a class="radio" href="./../?ind=gameplay">Streamer</a></li>
               </ul>
             </li>
-            <li><a class="radio" href="../?ind=gallerie">Gallerie</a></li>
+            <li><a class="radio" href="./../?ind=gallerie">Gallerie</a></li>
 
             <li>
               <a href="#" class="desktop-link radio">Liens utiles</a>
@@ -129,7 +130,7 @@
                   >
                 </li>
                 <li>
-                  <a class="radio" href="../?ind=squadron">Squadron 42</a>
+                  <a class="radio" href="./../?ind=squadron">Squadron 42</a>
                 </li>
               </ul>
             </li>
@@ -158,7 +159,7 @@
 
     <div>
       <button onclick="retourHaut()" id="haut" title="Retour haut de page">
-        <img src="../src/img/fleche.png" alt="fleche retour haut de page" />
+        <img src="./../src/img/fleche.png" alt="fleche retour haut de page" />
       </button>
     </div>
     <div class="page">
@@ -166,7 +167,7 @@
     </div>
     <footer>
       <div class="footer-content">
-        <img src="../src/img/logo_test.png" alt="logo star citizen" />
+        <img src="./../src/img/logo_test.png" alt="logo star citizen" />
         <div class="footer-top">
           <h1>Communauté Star Citizen France</h1>
           <p>
@@ -198,13 +199,13 @@
           <div class="footer-menu">
             <ul class="f-menu">
               <li>
-                <a class="radio" href="?ind=info_legale"
+                <a class="radio" href="./?ind=info_legale"
                   >Informations légales</a
                 >
               </li>
-              <li><a class="radio" href="?ind=cgu">CGU</a></li>
+              <li><a class="radio" href="./?ind=cgu">CGU</a></li>
               <li>
-                <a class="radio" href="?ind=politique_confidentialite"
+                <a class="radio" href="./?ind=politique_confidentialite"
                   >Politique de confidentialités</a
                 >
               </li>
@@ -250,6 +251,7 @@
       </script>
       <!-- partial -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <script src="./src/js/page_admin.js"></script>
       <script src="./../src/js/script.js"></script>
       <script src="./../src/js/le_fetch.js"></script>
       <script src="./src/js/img-icon.js"></script>
