--- a/project/www/admin/src/template/objet/add_mod_especes.html
+++ b/project/www/admin/src/template/objet/add_mod_especes.html
@@ -1,7 +1,7 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         <div class="admin-title"><h1>Espèce</h1></div>
-        <div class="admin-contenu">
+        <form class="admin-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_ESPECES_ID#]" />
             <div class="two-column">
                 <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_ESPECES_MODIF_CHECK#]>
@@ -27,13 +27,22 @@
             <label for="label-1">premier cont</label><input type="text" name="" id="" value="[#CITIZEN_ESPECES_PRCT#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
             <label for="label-1">origine</label><input type="text" name="" id="" value="[#CITIZEN_ESPECES_ORIGINE#]" class="input-admin"[#CITIZEN_ESPECES_ISPRO#]>
             <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_ESPECES_ISPRO#]>[#CITIZEN_ESPECES_CONTENU#]</textarea>
+            <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
+            <input type="radio" class="radio-onglet" id="onglet-diplom" name="radio-onglet" value="">
+            <input type="radio" class="radio-onglet" id="onglet-contro" name="radio-onglet" value="">
             <div id="div-all-tab" class="two-column">
-                <div>
-                    <h2>Informations</h2>
+                <div id="div-ul-onglets">
+                    <ul id="onglets">
+                        <li id="label-onglet-info"><label for="onglet-info"> Informations </label></li>
+                        <li id="label-onglet-diplom"><label for="onglet-diplom"> Diplomatie </label></li>
+                        <li id="label-onglet-contro"><label for="onglet-contro"> Controller </label></li>
+                    </ul>
+                </div>
+                <div class="div-onglet" id="div-onglet-info">
                     <button class="sauvegarde" id="add-lieu">Ajouter une information</button>
                     <table id="tab-all">
                         <tr>
-                            <th>Informations</th>
+                            <th>Nom</th>
                             <th class="th-admin"><img src="./src/images/pencil-fill.svg" alt=""></th>
                             <th class="th-admin"><img src="./src/images/trash3-fill.svg" alt=""></th>
                         </tr>
@@ -42,8 +51,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div>
-                    <h2>Diplomatie</h2>
+                <div class="div-onglet" id="div-onglet-diplom">
                     <button class="sauvegarde" id="add-diplomatie">Ajouter une diplomatie</button>
                     <table id="tab-all">
                         <tr>
@@ -56,8 +64,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div>
-                    <h2>Controller</h2>
+                <div class="div-onglet" id="div-onglet-contro">
                     <button class="sauvegarde" id="add-controle">Ajouter un contrôle</button>
                     <table id="tab-all">
                         <tr>
@@ -75,6 +82,6 @@
                 <button class="sauvegarde" id="annuler">annuler</button>
                 <button class="sauvegarde" id="validation">Validation</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
