--- a/project/www/admin/src/template/objet/add_mod_lieux.html
+++ b/project/www/admin/src/template/objet/add_mod_lieux.html
@@ -1,7 +1,7 @@
 <div class="display-admin">
     <div class="card-admin" data-state="#about">
         <div class="admin-title"><h1>Lieu</h1></div>
-        <div class="admin-contenu">
+        <form class="admin-contenu" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="[#CITIZEN_LIEU_ID#]" />
             <div class="two-column">
                 <input type="checkbox" class="darkSwitch two-column"[#CITIZEN_LIEU_MODIF_CHECK#]>
@@ -26,9 +26,14 @@
                 <option value=""></option>[#CITIZEN_LIEU_LIER#]
             </select>
             <label for="label-1">contenu</label><textarea name="" id="" cols="30" rows="10" class="input-admin text-bbcode"[#CITIZEN_LIEU_ISPRO#]>[#CITIZEN_LIEU_CONTENU#]</textarea>
+            <input type="radio" class="radio-onglet" id="onglet-info" name="radio-onglet" value="" checked>
             <div id="div-all-tab" class="two-column">
-                <div>
-                    <h2>Informations</h2>
+                <div id="div-ul-onglets">
+                    <ul id="onglets">
+                        <li id="label-onglet-info"><label for="onglet-info"> Informations </label></li>
+                    </ul>
+                </div>
+                <div class="div-onglet" id="div-onglet-info">
                     <button class="sauvegarde" id="add-lieu">Ajouter une information</button>
                     <table id="tab-all">
                         <tr>
@@ -46,6 +51,6 @@
                 <button class="sauvegarde" id="annuler">annuler</button>
                 <button class="sauvegarde" id="validation">Validation</button>
             </div>
-        </div>
+        </form>
     </div>
 </div>
