--- a/project/www/src/css/streamer.css
+++ b/project/www/src/css/streamer.css
@@ -20,6 +20,7 @@
 	z-index: 1;
 	overflow-x: hidden;
 	background-color: var(--light-color);
+	width: 90%;
 	display: flex;
 	flex-direction: column;
 	border-radius: 10px;
