--- a/project/www/admin/src/template/session/add_admin.html
+++ b/project/www/admin/src/template/session/add_admin.html
@@ -1,2 +1,3 @@
+<li><a class="radio" href="./?ind=error_list">Errors</a></li>
 <li><a class="radio" href="./?ind=messages">Messages</a></li>
 <li><a class="radio" href="./?ind=utilisateurs">Utilisateurs</a></li>
